--- a/@music/music/index.html
+++ b/@music/music/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <title>Solid App</title>
   </head>
-  <body class="h-full">
+  <body class="h-full bg-zinc-950">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" class="h-full"></div>
 
