--- a/@music/music/index.html
+++ b/@music/music/index.html
@@ -8,7 +8,7 @@
   </head>
   <body class="h-full bg-zinc-950">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class="h-full flex"></div>
+    <div id="root" class="h-full"></div>
 
     <script src="/src/index.tsx" type="module"></script>
   </body>
