--- a/@music/music/index.html
+++ b/@music/music/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <title>Solid App</title>
+    <title>Music</title>
   </head>
-  <body class="h-full bg-zinc-950">
+  <body class="h-full dark">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" class="h-full"></div>
 
